# haskell-school-of-expression

./: CHANGELOG.md  SOE.cabal  cabal.project.freeze  default.nix  shell.nix  stack.yaml
haskore/: Readme
haskore/src/: BasicHaskToMidi.lhs  CSound.lhs  CSound_Tutorial.lhs  ChildSong6.lhs  HaskToMidi.lhs  HaskoreExamples.lhs  HaskoreUtils.hs  LoadMidi.lhs  MidiFile.lhs  OutputMidi.lhs  ReadMidi.lhs  TestHaskore.lhs
src/: Code.html  Concurrent.hs  Draw.lhs  Fal.lhs  Music.lhs  Perform.lhs  Picture.lhs  Robot.lhs  SOE.hs
src/SOE/: FreeType.hs
