cabal-version:      >=1.10

name:               SOE
version:            0.1.0.0

-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:       LICENSE
author:             Paul Hudak
maintainer:         jaro.reinders@gmail.com

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README
data-files:
  fonts/DejaVuSans.ttf

library
  exposed-modules:
    Animation
    EnableGUI
    Fal
    SOE
    Draw
    Memo1
    Music
    Perform
    Picture
    Reactimate
    Region
    Robot
    Shape
    Snowflake
    Concurrent
    SimpleGraphics
    SOE.FreeType
  other-modules:
    Paths_SOE

  -- other-extensions:
  build-depends:
      base      >=4.12 && <4.21
    , ghc-prim
    , GLFW-b
    , old-time
    , OpenGL
    , stm
    , array
    , freetype2

  hs-source-dirs:   src
  default-language: Haskell2010
